<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juanpedrosanchez.flashtrip.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:nestedScrollingEnabled="true">

            <Button
                android:id="@+id/btn_login2"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="116dp"
                android:layout_height="64dp"
                android:layout_marginBottom="52dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="47dp"
                android:layout_marginTop="83dp"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_usernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Display1"
                    android:textColor="@color/colorAccent" />

                <EditText
                    android:id="@+id/et_usernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:drawable/editbox_dropdown_dark_frame"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColor="@color/colorFooter"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_passLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_thambi"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Display1"
                    android:textColor="@color/colorAccent"
                    tools:layout_editor_absoluteX="63dp"
                    tools:layout_editor_absoluteY="106dp" />

                <EditText
                    android:id="@+id/et_passLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:drawable/editbox_dropdown_dark_frame"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:elegantTextHeight="true"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textColor="@color/colorFooter"
                    android:textSize="24sp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
